--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/d3": "^3.5.38",
+    "@types/d3-selection": "^1.3.0",
+    "@types/plotly.js": "^1.35.0",
     "core-js": "^2.4.1",
+    "d3": "^5.0.0",
+    "plotly": "^1.0.6",
+    "plotly.js": "^1.35.2",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
