--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@types/plotly.js": "^1.35.0",
     "core-js": "^2.4.1",
     "d3": "^5.0.0",
+    "jquery": "^3.3.1",
     "plotly": "^1.0.6",
     "plotly.js": "^1.35.2",
+    "popper.js": "^1.14.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
